ingress/ingress-controller.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "dev-ingress-controller"
  namespace: "development"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: "admin-sas"
          servicePort: 80
    host: "dev.admin.divibank.co"
  - http:
      paths:
      - backend:
          serviceName: "divibank-backoffice-sas"
          servicePort: 80
    host: "dev.backoffice-api.divibank.co"
  - http:
      paths:
      - backend:
          serviceName: "front-backoffice-sas"
          servicePort: 80
    host: "dev.backoffice.divibank.co"
  - http:
      paths:
      - backend:
          serviceName: "front-client-sas"
          servicePort: 80
    host: "dev.divibank.co"
